--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,6 @@ body{
 .search-bar-div, .user-details-div{
   box-shadow: 0px 16px 30px -10px hsla(227, 46%, 50%, 0.2);
 }
+::placeholder{
+  font-size: 1.125rem;
+}
